syntax = "proto3";

import "google/protobuf/any.proto";

package test;
message TestAny {
  int32 id = 1;
  google.protobuf.Any any_value = 2;
}

message StringValue {
  string value = 1;
}

message Int32Value {
  int32 value = 1;
}

message AnyValue {
  google.protobuf.Any any_value_1 = 1;
  google.protobuf.Any any_value_2 = 2;
}

message StringInt32Value {
  string first = 1;
  int32 second = 2;
}

message StringStringInt32Value {
  string first = 1;
  StringInt32Value second = 2;
  Float32StringValue third = 3;
}

message Float32StringValue {
  float first = 1;
  string second = 2;
}